# opensnitch

./: .gitignore  MERGE.md  Makefile
daemon-rs/: .markdownlint-cli2.yaml  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  DB_STORAGE_SPIKE.md  DESIGN_RULES.md  DOCS.md  OPENWRT.md  PERF.md  TODO.md
daemon-rs/crates/daemon/: Cargo.toml
daemon-rs/crates/daemon/docs/: rule-operator-parity.md
daemon-rs/crates/daemon/src/: bus.rs  config.rs  daemon.rs  error.rs  integration_kernel_tests.rs  logging.rs  main.rs  runtime.rs  tunables.rs
daemon-rs/crates/daemon/src/adapters/: firewall_iptables.rs  firewall_nft.rs  mod.rs  proc_connector.rs  proto_mapper.rs  socket_diag.rs
daemon-rs/crates/daemon/src/client/: client.rs  mod.rs  notifications.rs
daemon-rs/crates/daemon/src/commands/: command_control.rs  mod.rs  rule_command.rs  task_runtime.rs
daemon-rs/crates/daemon/src/config/: config.rs  enums.rs  mod.rs  parsers.rs
daemon-rs/crates/daemon/src/daemon/: bootstrap.rs  kernel_pipeline.rs  migration.rs  probes.rs  proc_workers.rs  reload.rs  serve.rs  signals.rs  startup.rs  tasks.rs  worker_startup.rs
daemon-rs/crates/daemon/src/ffi/: libbpf.rs  mod.rs  netlink.rs  nfqueue.rs  proc_events.rs  seccomp.rs
daemon-rs/crates/daemon/src/flows/: mod.rs  notification_flow.rs  verdict_flow.rs
daemon-rs/crates/daemon/src/models/: auth_capability.rs  command_rpc.rs  config_reload.rs  config_runtime.rs  config_storage.rs  connection.rs  connection_context.rs  connection_owner.rs  connection_state.rs  connection_worker_state.rs  dns_payload.rs  dns_worker_state.rs  ebpf_availability.rs  ebpf_payload.rs  ebpf_state.rs  effective_tunables.rs  event.rs  firewall.rs  firewall_config.rs  firewall_runtime.rs  firewall_state.rs  firewall_storage.rs  hash_cache_storage.rs  kernel_event.rs  kernel_pipeline.rs  lifecycle_contract.rs  metrics_config.rs  metrics_snapshot.rs  mod.rs  notification.rs  notification_stream.rs  policy_tx.rs  proc_event.rs  proc_net_packet.rs  process.rs  process_state.rs  process_worker_state.rs  prometheus_wire.rs  queue_metrics_snapshot.rs  rule.rs  (+23 more)
daemon-rs/crates/daemon/src/platform/: mod.rs
daemon-rs/crates/daemon/src/services/: config_service.rs  connection_service.rs  dns_service.rs  ebpf_runtime_service.rs  firewall_service.rs  lifecycle.rs  lifecycle_contract.rs  mod.rs  process_service.rs  rule_service.rs  runtime_state_service.rs  stats_service.rs  ui_session_service.rs  watch_service.rs
daemon-rs/crates/daemon/src/tests/: client.rs  command_control.rs  config_parsing.rs  config_service.rs  dns_service.rs  ebpf_runtime_service.rs  firewall_nft.rs  firewall_privileged.rs  firewall_service.rs  mod.rs  notification_flow.rs  pid_resolver.rs  proc_connector.rs  process_service.rs  readonly_smoke.rs  rule_command.rs  rule_service.rs  socket_diag.rs  stats_service.rs  support.rs  task_runtime.rs  ui_session_service.rs  verdict_flow.rs  watch_service.rs  workers_dispatch.rs  workers_dns.rs  workers_ebpf.rs
daemon-rs/crates/daemon/src/tunables/: autotune.rs  effective.rs  mod.rs  tunables.rs
daemon-rs/crates/daemon/src/utils/: atomic_write.rs  byte_read.rs  cert_gen.rs  channel_send.rs  command_output.rs  command_path.rs  config_reload.rs  daemon_guard.rs  duration_parse.rs  hex_parse.rs  http_client.rs  mod.rs  (+26 more)
daemon-rs/crates/ebpf/: Cargo.toml  QUIRKS.md  README.md
daemon-rs/crates/ebpf-common/: Cargo.toml
daemon-rs/crates/ebpf-common/src/: lib.rs
daemon-rs/crates/ebpf/src/: lib.rs
daemon-rs/crates/kernel-caps/: Cargo.toml
daemon-rs/crates/kernel-caps/src/: lib.rs
daemon-rs/crates/proto/: Cargo.toml  build.rs
daemon-rs/crates/proto/src/: lib.rs
daemon-rs/crates/storage-format-core/: Cargo.toml
daemon-rs/crates/storage-format-core/src/: codec.rs  lib.rs
daemon-rs/crates/storage-format-json/: Cargo.toml
daemon-rs/crates/storage-format-json/src/: codec.rs  lib.rs
daemon-rs/crates/storage-format-toml/: Cargo.toml
daemon-rs/crates/storage-format-toml/src/: codec.rs  error.rs  lib.rs
daemon-rs/crates/storage-format-uci/: Cargo.toml
daemon-rs/crates/storage-format-uci/src/: codec.rs  document.rs  emitter.rs  error.rs  lib.rs  parser.rs  serde_bridge.rs
daemon-rs/crates/storage-format-yaml/: Cargo.toml
daemon-rs/crates/storage-format-yaml/src/: codec.rs  lib.rs
daemon-rs/crates/tools/: Cargo.toml
daemon-rs/crates/tools/src/: build_cmds.rs  cli.rs  harness_cmds.rs  live_logs.rs  main.rs  test_guard.rs
daemon-rs/crates/tools/tests/: README.md  orchestration_smoke.rs
daemon-rs/crates/transport-wire-core/: Cargo.toml
daemon-rs/crates/transport-wire-core/src/: lib.rs  ports.rs  wire_helpers.rs
daemon-rs/crates/transport-wire-grpc-client/: Cargo.toml
daemon-rs/crates/transport-wire-grpc-client/src/: client.rs  lib.rs  rpc.rs  tls.rs  transport.rs  wire_protos.rs
daemon-rs/crates/transport-wire-openwrt-ubus/: Cargo.toml
daemon-rs/crates/transport-wire-openwrt-ubus/src/: lib.rs
daemon-rs/data/: default-config.example.json  default-config.example.toml  default-config.example.uci  default-config.example.yaml  metrics.example.json  metrics.example.uci  system-fw.cli-export.example.uci  system-fw.cli-show.example.txt  system-fw.example.json  system-fw.example.toml  system-fw.example.uci  system-fw.example.yaml  tasks.example.json  tasks.example.uci  tunables.example.json  tunables.example.uci
daemon-rs/data/fixtures/firewall/: README.md  chain-inherit-system-fw.example.json  nftables-supported-expressions.example.json  openwrt-firewall-runtime.example.json  position-parsing-system-fw.example.json  top-rule-system-fw.example.json
daemon-rs/data/init/: opensnitchd-rs.openrc.in  opensnitchd-rs.procd.in  opensnitchd-rs.service.in
daemon-rs/data/rules/: allow-firefox-dns.example.json  allow-firefox-dns.example.uci
daemon-rs/scripts/: build_ebpf.sh  check_async_send_policy.sh  check_design_rule_helpers_and_contracts.sh  check_design_rules_policy.sh  check_immutable_state_access_policy.sh  check_quirks_relocations.sh  check_snapshot_clone_policy.sh  mock_ui_client.py  release_commit_from_changelog.sh  with_test_guard.sh
(+609 files in other folders)
