[workspace]
resolver = "3"
members = [
    "crates/ebpf",
    "crates/ebpf-common",
    "crates/proto",
    "crates/daemon",
    "crates/tools"
]
default-members = [
    "crates/ebpf-common",
    "crates/proto",
    "crates/daemon",
    "crates/tools"
]

[workspace.package]
edition = "2024"
license = "GPL-3.0"

[profile.release]
lto = "thin"
