[workspace]
resolver = "3"
members = [
    "crates/ebpf",
    "crates/ebpf-common",
    "crates/kernel-caps",
    "crates/proto",
    "crates/daemon",
    "crates/tools",
    "crates/transport-wire-core",
    "crates/transport-wire-grpc-client",
    "crates/storage-format-json",
    "crates/storage-format-core",
    "crates/storage-format-yaml",
    "crates/storage-format-toml"
]
default-members = [
    "crates/ebpf-common",
    "crates/kernel-caps",
    "crates/proto",
    "crates/daemon",
    "crates/tools",
    "crates/transport-wire-core",
    "crates/transport-wire-grpc-client",
    "crates/storage-format-json",
    "crates/storage-format-core",
    "crates/storage-format-yaml",
    "crates/storage-format-toml"
]

[workspace.package]
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
anyhow = "1.0"
tonic = "0.14"
tokio = "1.50"
tokio-stream = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
hyper-rustls = { version = "0.27", default-features = true, features = ["http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
nix = { version = "0.31", features = ["socket"] }
rustls = "0.23"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
opt-level = 3

# Size-optimised profile for embedded/constrained targets (e.g. OpenWrt).
# Use: cargo build --profile release-embedded -p opensnitchd-rs
# Then: make install-rs CARGO_PROFILE=release-embedded ...
# Trades hot-path throughput for ~30-40% smaller binary vs release.
[profile.release-embedded]
inherits = "release"
opt-level = "s"     # size-first; keep vectors inlined, but not necessarily loops; see https://doc.rust-lang.org/reference/profiling.html#codegen-options
lto = true          # fat LTO: maximum dead-code elimination across all crates
codegen-units = 1   # single CGU required for fat LTO; no parallel codegen
strip = "symbols"   # strip debug symbols from the final binary
panic = "abort"     # no unwinding machinery; saves ~50-100 KB on musl targets
