[workspace]
resolver = "3"
members = [
    "crates/ebpf",
    "crates/ebpf-common",
    "crates/kernel-caps",
    "crates/proto",
    "crates/daemon",
    "crates/tools",
    "crates/transport-wire-core",
    "crates/transport-wire-grpc-client",
    "crates/transport-wire-openwrt-ubus",
    "crates/storage-format-json",
    "crates/storage-format-core",
    "crates/storage-format-yaml",
    "crates/storage-format-toml",
    "crates/storage-format-uci"
]
default-members = [
    "crates/daemon",
    "crates/tools"
]

[workspace.package]
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
anyhow = "1.0"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tokio = "1.50"
tokio-util = "0.7"
tokio-stream = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "1.1"
prost = "0.14"
hyper = "1.9"
hyper-rustls = { version = "0.27", default-features = true, features = ["http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
nix = { version = "0.31", features = ["socket"] }
rustls = "0.23"
rustls-pki-types = "1.14"
tower = { version = "0.5", features = ["util"] }
time = "0.3"
regex = "1.12"
tracing = "0.1"
flate2 = "1"
sha2 = "0.11"
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
rcgen = "0.14"
ctor = "0.10"
tracing-subscriber = "0.3"
postcard = "1.1"
syslog = "7.0"
aho-corasick = "1.1"
globset = "0.4"
quick_cache = "0.6"
dashmap = "6.1"
arc-swap = "1.9"
sha1 = "0.11"
md-5 = "0.11"
libbpf-rs = "0.26"
aya = "0.13"
aya-ebpf = "0.1"
netlink-bindings = "0.3"
netlink-socket2 = "0.3"
rustix = "1.1"
http-body-util = "0.1"
async-trait = "0.1"

[profile.release]
lto = "thin"
opt-level = 3

# Size-optimised profile for embedded/constrained targets (e.g. OpenWrt).
# Use: cargo build --profile release-embedded -p opensnitchd-rs
# Then: make install-rs CARGO_PROFILE=release-embedded ...
# Trades hot-path throughput for ~30-40% smaller binary vs release.
[profile.release-embedded]
inherits = "release"
opt-level = "s"     # size-first; keep vectors inlined, but not necessarily loops; see https://doc.rust-lang.org/reference/profiling.html#codegen-options
lto = true          # fat LTO: maximum dead-code elimination across all crates
codegen-units = 1   # single CGU required for fat LTO; no parallel codegen
strip = "symbols"   # strip debug symbols from the final binary
panic = "abort"     # no unwinding machinery; saves ~50-100 KB on musl targets
