[package]
name = "opensnitchd-rs"
version = "0.5.1"
edition = "2024"

[features]
default = ["native-ebpf-ringbuf", "aya-ebpf"]
native-ebpf-ringbuf = []
libbpf-ebpf = ["dep:libbpf-rs"]
aya-ebpf = ["dep:aya"]
subscriptions = []
metrics-export = []

[dependencies]
async-trait = "0.1"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process", "net", "io-util", "fs"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { version = "0.14", features = ["tls-webpki-roots", "gzip"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syslog = "7.0"
nix = { version = "0.31", features = ["user", "socket"] }
regex = "1.12"
aho-corasick = "1.1"
globset = "0.4"
quick_cache = "0.6"
dashmap = "6.1"
arc-swap = "1.9"
# sha2/sha1/md-5: keep at 0.10 — 0.11.0 (2026-03-25) requires digest 0.11 with breaking API changes
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "local-offset"] }

opensnitch-proto = { path = "../proto" }
opensnitch-ebpf-common = { path = "../ebpf-common" }
libbpf-rs = { version = "0.26", optional = true }
aya = { version = "0.13", optional = true }
netlink-bindings = { version = "0.3", features = ["inet-diag", "rt-link", "rt-addr", "nftables"] }
netlink-socket2 = { version = "0.3", features = ["tokio"] }
rustix = { version = "1.1", features = ["net", "event", "thread", "system"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
hyper-rustls = { version = "0.27", default-features = true, features = ["http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustls = "0.23"
rustls-pki-types = "1.14"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
ctor = "0.6"
