[package]
name = "opensnitchd-rs"
version = "0.6.0"
edition.workspace = true
license.workspace = true

[features]
default = ["native-ebpf-ringbuf", "aya-ebpf", "client-transport", "storage-format-json"]
native-ebpf-ringbuf = []
libbpf-ebpf = ["dep:libbpf-rs"]
aya-ebpf = ["dep:aya"]
client-transport = ["dep:transport_wire_grpc_client", "dep:hyper-rustls", "dep:rustls", "dep:rustls-pki-types", "dep:x509-cert"]
transport-wire-grpc-client = ["client-transport"]
subscriptions = ["client-transport", "transport_wire_grpc_client/subscriptions"]
metrics-export = ["dep:hyper", "dep:http-body-util", "dep:flate2", "dep:prost"]
storage-format-json = ["dep:storage_format_json"]
storage-format-yaml = ["dep:storage_format_yaml"]
storage-format-toml = ["dep:storage_format_toml"]

[dependencies]
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process", "net", "io-util", "fs"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { version = "0.14", features = ["tls-webpki-roots", "gzip"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syslog = "7.0"
nix = { version = "0.31", features = ["user", "socket"] }
regex = "1.12"
aho-corasick = "1.1"
globset = "0.4"
quick_cache = "0.6"
dashmap = "6.1"
arc-swap = "1.9"
# sha2/sha1/md-5: keep at 0.10 — 0.11.0 (2026-03-25) requires digest 0.11 with breaking API changes
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "local-offset"] }

proto = { package = "opensnitch-proto", path = "../proto" }
ebpf_common = { package = "opensnitch-ebpf-common", path = "../ebpf-common" }
libbpf-rs = { version = "0.26", optional = true }
aya = { version = "0.13", optional = true }
netlink-bindings = { version = "0.3", features = ["inet-diag", "rt-link", "rt-addr", "nftables"] }
netlink-socket2 = { version = "0.3", features = ["tokio"] }
rustix = { version = "1.1", features = ["net", "event", "thread", "system"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
hyper-rustls = { version = "0.27", default-features = true, features = ["http2"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"] }
hyper = { version = "1", features = ["http1", "server"], optional = true }
http-body-util = { version = "0.1", optional = true }
flate2 = { version = "1", optional = true }
prost = { version = "0.14", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pki-types = { version = "1.14", optional = true }
x509-cert = { version = "0.2", default-features = false, features = ["std"], optional = true }
rcgen = "0.13"
tower = { version = "0.5", features = ["util"] }
kernel_caps = { package = "opensnitch-kernel-caps", path = "../kernel-caps" }
transport_wire_core = { package = "opensnitch-transport-wire-core", path = "../transport-wire-core", features = ["subscriptions"] }
transport_wire_grpc_client = { package = "opensnitch-transport-wire-grpc-client", path = "../transport-wire-grpc-client", optional = true }
storage_format_core = { package = "opensnitch-storage-format-core", path = "../storage-format-core" }
storage_format_json = { package = "opensnitch-storage-format-json", path = "../storage-format-json", optional = true }
storage_format_yaml = { package = "opensnitch-storage-format-yaml", path = "../storage-format-yaml", optional = true }
storage_format_toml = { package = "opensnitch-storage-format-toml", path = "../storage-format-toml", optional = true }

[dev-dependencies]
# async-trait is needed only to implement the tonic-generated `Ui` server trait in
# flow tests; tonic-prost still desugars server traits via #[async_trait].
async-trait = "0.1"
ctor = "0.6"
