[package]
name = "opensnitchd-rs"
version = "0.6.0"
edition.workspace = true
license.workspace = true

[features]
default = ["native-ebpf-ringbuf", "aya-ebpf", "transport-wire-grpc-client", "storage-format-json", "metrics-syslog"]
native-ebpf-ringbuf = []
libbpf-ebpf = ["dep:libbpf-rs"]
aya-ebpf = ["dep:aya"]
cert-gen = ["dep:rcgen"]
kernel-caps-diag = ["dep:kernel_caps"]
http-client-hyper = ["dep:hyper", "dep:http-body-util", "dep:hyper-util", "dep:hyper-rustls"]
task-http = ["http-client-hyper"]
client-transport = []
transport-wire-grpc-client = ["client-transport", "dep:transport_wire_grpc_client", "transport_wire_grpc_client/subscriptions"]
subscriptions = ["http-client-hyper"]
metrics-http-serve-text = ["dep:hyper", "dep:http-body-util", "dep:hyper-util", "dep:flate2"]
metrics-http-serve-openmetrics = ["dep:hyper", "dep:http-body-util", "dep:hyper-util", "dep:flate2"]
metrics-http-serve-protobuf = ["dep:hyper", "dep:http-body-util", "dep:hyper-util", "dep:flate2", "dep:prost"]
metrics-http-push-text = ["http-client-hyper", "dep:flate2"]
metrics-http-push-protobuf = ["http-client-hyper", "dep:flate2", "dep:prost"]
metrics-http-push-openmetrics = ["http-client-hyper", "dep:flate2"]
metrics-http-push-influxdb = ["http-client-hyper", "dep:flate2"]
metrics-syslog = []
storage-format-json = ["dep:storage_format_json"]
storage-format-yaml = ["dep:storage_format_yaml"]
storage-format-toml = ["dep:storage_format_toml"]
storage-format-uci = ["dep:storage_format_uci"]
openwrt = ["storage-format-uci", "dep:transport_wire_openwrt_ubus"]

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process", "net", "io-util", "fs"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
syslog = { workspace = true }
nix = { workspace = true, features = ["user", "socket"] }
regex = { workspace = true }
aho-corasick = { workspace = true }
globset = { workspace = true }
quick_cache = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "macros", "local-offset"] }

ebpf_common = { package = "opensnitch-ebpf-common", path = "../ebpf-common" }
libbpf-rs = { workspace = true, optional = true }
aya = { workspace = true, optional = true }
netlink-bindings = { workspace = true, features = ["inet-diag", "rt-link", "rt-addr", "nftables"] }
netlink-socket2 = { workspace = true, features = ["tokio"] }
rustix = { workspace = true, features = ["net", "event", "thread", "system"] }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "http2", "tokio"], optional = true }
hyper = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper-rustls = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
kernel_caps = { package = "opensnitch-kernel-caps", path = "../kernel-caps", optional = true }
transport_wire_core = { package = "opensnitch-transport-wire-core", path = "../transport-wire-core", features = ["subscriptions"] }
transport_wire_grpc_client = { package = "opensnitch-transport-wire-grpc-client", path = "../transport-wire-grpc-client", optional = true }
storage_format_core = { package = "opensnitch-storage-format-core", path = "../storage-format-core" }
storage_format_json = { package = "opensnitch-storage-format-json", path = "../storage-format-json", optional = true }
storage_format_yaml = { package = "opensnitch-storage-format-yaml", path = "../storage-format-yaml", optional = true }
storage_format_toml = { package = "opensnitch-storage-format-toml", path = "../storage-format-toml", optional = true }
storage_format_uci = { package = "opensnitch-storage-format-uci", path = "../storage-format-uci", optional = true }
transport_wire_openwrt_ubus = { package = "opensnitch-transport-wire-openwrt-ubus", path = "../transport-wire-openwrt-ubus", optional = true }

[dev-dependencies]
# async-trait is needed only to implement the tonic-generated `Ui` server trait in
# flow tests; tonic-prost still desugars server traits via #[async_trait].
async-trait = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["tls-webpki-roots", "gzip"] }
proto = { package = "opensnitch-proto", path = "../proto" }
ctor = { workspace = true }
