[package]
name = "opensnitch-ebpf"
version = "0.5.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
opensnitch-ebpf-common = { path = "../ebpf-common" }

[target.'cfg(target_arch = "bpf")'.dependencies]
aya-ebpf = "0.1.1"