[package]
name = "opensnitch-storage-format-toml"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
opensnitch-storage-format-core = { path = "../storage-format-core" }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
