[package]
name = "opensnitch-storage-format-yaml"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
opensnitch-storage-format-core = { path = "../storage-format-core" }
serde = { workspace = true, features = ["derive"] }
serde_yml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
