[package]
name = "tools"
version = "0.6.0"
edition.workspace = true
license.workspace = true
publish = false

[features]
subscriptions = []
kernel-caps-diag = ["dep:opensnitch-kernel-caps"]

[dependencies]
time = { workspace = true, features = ["formatting", "local-offset", "macros"] }
opensnitch-kernel-caps = { path = "../kernel-caps", optional = true }
