[package]
name = "opensnitch-transport-wire-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Unified transport core: port contracts and wire helper primitives"

[features]
default = []
subscriptions = []

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
